a1b/auto_tests/make.err
In file included from map.c:26:0:
util.h: In function ‘reset_bitmap’:
util.h:58:2: error: implicit declaration of function ‘memset’ [-Werror=implicit-function-declaration]
  memset(bitmap, 0, A1FS_BLOCK_SIZE);
  ^~~~~~
util.h:58:2: error: incompatible implicit declaration of built-in function ‘memset’ [-Werror]
util.h:58:2: note: include ‘<string.h>’ or provide a declaration of ‘memset’
util.h: In function ‘is_used_bit’:
util.h:106:13: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  } else if (lookup = LOOKUP_IB) {
             ^~~~~~
util.h: In function ‘find_first_free_blk_num’:
util.h:155:17: error: unused variable ‘bitmap’ [-Werror=unused-variable]
  unsigned char *bitmap;
                 ^~~~~~
util.h: In function ‘init_directory_blk’:
util.h:182:18: error: ‘dir’ undeclared (first use in this function); did you mean ‘rmdir’?
  (a1fs_dentry *) dir = (a1fs_dentry *) jump_to(image, blk_num, A1FS_BLOCK_SIZE);
                  ^~~
                  rmdir
util.h:182:18: note: each undeclared identifier is reported only once for each function it appears in
util.h:186:1: error: no return statement in function returning non-void [-Werror=return-type]
 }
 ^
util.h: In function ‘find_first_empty_direntry’:
util.h:192:18: error: ‘dir’ undeclared (first use in this function); did you mean ‘rmdir’?
  (a1fs_dentry *) dir = (a1fs_dentry *) jump_to(image, blk_num, A1FS_BLOCK_SIZE);
                  ^~~
                  rmdir
util.h:195:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return offset;
           ^~~~~~
util.h:198:9: error: return makes pointer from integer without a cast [-Werror=int-conversion]
  return -1;
         ^
util.h: In function ‘get_inode_by_inumber’:
util.h:213:11: error: comparison of unsigned expression < 0 is always false [-Werror=type-limits]
  if (inum < 0 || inum >= s->s_num_inodes) {
           ^
At top level:
util.h:210:20: error: ‘get_inode_by_inumber’ defined but not used [-Werror=unused-function]
 static a1fs_inode *get_inode_by_inumber(void *image, a1fs_ino_t inum) {
                    ^~~~~~~~~~~~~~~~~~~~
util.h:191:18: error: ‘find_first_empty_direntry’ defined but not used [-Werror=unused-function]
 static uint32_t *find_first_empty_direntry(void *image, a1fs_blk_t blk_num) {
                  ^~~~~~~~~~~~~~~~~~~~~~~~~
util.h:181:13: error: ‘init_directory_blk’ defined but not used [-Werror=unused-function]
 static bool init_directory_blk(void *image, a1fs_blk_t blk_num) {
             ^~~~~~~~~~~~~~~~~~
util.h:153:17: error: ‘find_first_free_blk_num’ defined but not used [-Werror=unused-function]
 static uint32_t find_first_free_blk_num(void *image, uint32_t lookup) {
                 ^~~~~~~~~~~~~~~~~~~~~~~
util.h:146:13: error: ‘mask_range’ defined but not used [-Werror=unused-function]
 static void mask_range(void *image, uint32_t offset_start, uint32_t offset_end, uint32_t lookup) {
             ^~~~~~~~~~
util.h:73:23: error: ‘get_first_data_bitmap’ defined but not used [-Werror=unused-function]
 static unsigned char *get_first_data_bitmap(void *image) {
                       ^~~~~~~~~~~~~~~~~~~~~
util.h:67:23: error: ‘get_first_inode_bitmap’ defined but not used [-Werror=unused-function]
 static unsigned char *get_first_inode_bitmap(void *image) {
                       ^~~~~~~~~~~~~~~~~~~~~~
util.h:57:13: error: ‘reset_bitmap’ defined but not used [-Werror=unused-function]
 static void reset_bitmap(unsigned char* bitmap) {
             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [map.o] Error 1
